# image_processor

./: .gitignore  CMakeLists.txt  image_processor.cpp
src/commands_parser/: parser.cpp  parser.h
src/filters/: abstract_filter.h  crop_filter.cpp  crop_filter.h  crystallize_filter.cpp  crystallize_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filters.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  scale_filter.cpp  scale_filter.h  sharpening_filter.cpp  sharpening_filter.h
src/image/: image.cpp  image.h
test_script/ut/: CMakeLists.txt  test.cpp
